
Version 0.9	- xx October 2001
  * Fix spurious warning from calling functions like:  zip(*args)
  * Fix -F/--rcfile option so it really works

Version 0.8.4	- 24 September 2001
  * Allow warning suppressions to be specified as regular expressions
  * Add -z/--no-varargsused to ignore *args for functions w/variable args
  * Add warning checks when deleting variables
  * Add check for except Error1, Error2 : # should be except (Error1, Error2) :
  * Fix spurious warning when using parameter as dict for format string
  * Fix spurious warning when using lambda in __init__
  * Add check that pychecker/checker.py is same version as other files
  * Get setup.py to work on windows, etc. if don't have /tmp

Version 0.8.3	- 12 August 2001
  * Fix internal errors when doing % on non-strings and other format problems
  * Fix spurious warning when using a constant {} with a format mapping

Version 0.8.2	- 12 August 2001
  * Check format strings even if using global & local constants
  * Add check that [].append() only takes one argument
  * Add check that # parameters are correct for builtin functions
  * Add warnings for --, ++, ~~:
  	"Operator (%s) doesn't exist, statement has no effect"
  * Add -Q/--quiet to be real quiet, only output warning msgs, nothing else
  * Add -y/--classattr config option (warning was not configurable before)
  	(warn if class attribute doesn't exist)
  * Add -x/--miximport config option (warning was not configurable before)
  	(warn if mixing: import/from ... import)
  * Add -u/--callinit config option (warning was not configurable before)
  	(warn if Subclass.__init__() not called)
  * Add constants together on stack when get + to avoid some spurious warnings
  * Fix method and attribute checks for None and Ellipsis
  * Fix spurious warnings when doing a local import and use module in lambda
  * Fix spurious warnings when object attribute has same name as class
  * Fix Object (x) has no attribute warnings for Python 2.2a1 built-in types